--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My Site</title>
+    <title>CSCI 1951Y</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
-      <h1>CSCI1951Y</h1>
+      <h1>CSCI 1951Y: Using an Interactive Proof Assistant to Do Mathematics</h1>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <main>
-      <p>Using proof assistants for projective geometry</p>
+      <p>Using proof assistants for projective geometry.</p>
     </main>
   </body>
 </html>
