--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
       and geometry. Students will learn to use the Isabelle proof assistant to initially do some proofs covering introductory material in a Calculus book, 
       and then move on to study both real and synthetic projective geometry, leading up to showing every Desarguesian projective plane admits coordinates 
       in some division ring. They'll also complete final projects in some geometry-related topic.
-      
       </div>
+    <div>
+    <h2> Syllabus </h2>
+    <div>
+    <h2> Assignments </h2>
+    Assignments and due dates will be added here. A link to Gradescope will also be added.
+    </div>
+    <div>
+    <h2>
+    Useful Links
+    </h2>
+    </div>
     </main>
   </body>
 </html>
