--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
     <div>
     <h2> Syllabus </h2>
+    </div>
     <div>
     <h2> Assignments </h2>
     Assignments and due dates will be added here. A link to Gradescope will also be added.
