--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <h2>
     Useful Links
     </h2>
+    <ol>
+    <li> 
+      <a href="Hartshorne Projective Geometry.pdf">
+        Projective Geometry by Hartshorne (PDF)
+      </a>
+    </li>
+    </ol>
     </div>
     </main>
   </body>
