--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         Projective Geometry by Hartshorne (PDF)
       </a>
     </li>
+    <li> 
+      <a href="Formalizing Math in Isabelle.pdf">
+       First Experiences in Isabelle/HOL by Koutsoukou-Argyraki (PDF)
+      </a>
+    </li>
     </ol>
     </div>
     </main>
