--- a/index.html
+++ b/index.html
@@ -34,13 +34,33 @@
     </h2>
     <ol>
     <li> 
+      <a href="https://isabelle.in.tum.de/">
+        Isabelle download link
+      </a>
+    </li>
+    <li> 
+      <a href="https://isabelle.zulipchat.com/">
+        Isabelle's Zulip chat
+      </a>
+    </li>
+    <li> 
       <a href="Hartshorne Projective Geometry.pdf">
-        Projective Geometry by Hartshorne (PDF)
+        Hartshorne: Projective Geometry (PDF)
       </a>
     </li>
     <li> 
       <a href="Formalizing Math in Isabelle.pdf">
-       First Experiences in Isabelle/HOL by Koutsoukou-Argyraki (PDF)
+       Koutsoukou-Argyraki: First Experiences in Isabelle/HOL (PDF)
+      </a>
+    </li>
+    <li> 
+      <a href="Gentle Introduction to Isabelle Teege.pdf">
+       Teege: Gentle Introduction to Isabelle (PDF)
+      </a>
+    </li>
+    <li> 
+      <a href="Nipkow Isabelle Guide.pdf">
+       Nipkow: Guide to Isabelle (PDF)
       </a>
     </li>
     </ol>
