--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
       <h1>CSCI 1951Y: Using an Interactive Proof Assistant to Do Mathematics</h1>
     </header>
     <main>
-      <div> 
+      <div>
+        <h2> Welcome </h2>
+        <p> Welcome to the course website for the Fall 2025 edition of CSCI1951Y at Brown University.
+        Here is some basic information about the course: 
+        </p>
+        <p> Professor: <a> John F. Hughes </p>
+        <p> Head TA: Robert Shlyakhtenko </p>
+        <p> Class Schedule: MWF 2pm-2:50pm in CIT 101 </p>
+    <div> 
       <h2> Course Description </h2>
       Proof assistants are software tools based on logic. 
       They are typically used in both mathematics and computer science to verify proofs of theorems (in mathematics) or algorithm correctness (in CS). 
@@ -22,7 +30,8 @@
       in some division ring. They'll also complete final projects in some geometry-related topic.
       </div>
     <div>
-    <h2> Syllabus </h2>
+    <h2> Syllabus & Edstem </h2>
+      To be added...
     </div>
     <div>
     <h2> Assignments </h2>
