--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p> Welcome to the course website for the Fall 2025 edition of CSCI1951Y at Brown University.
         Here is some basic information about the course: 
         </p>
-        <p> Professor: <a> John F. Hughes </p>
+        <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes </a> </p>
         <p> Head TA: Robert Shlyakhtenko </p>
         <p> Class Schedule: MWF 2pm-2:50pm in CIT 101 </p>
     <div> 
