--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes </a> </p>
         <p> Head TA: Robert Shlyakhtenko </p>
         <p> Class Schedule: MWF 2pm-2:50pm in CIT 101 </p>
+      </div>
     <div> 
       <h2> Course Description </h2>
       Proof assistants are software tools based on logic. 
