Revise syllabus and assignments sections in index.html

--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
       </div>
     <div>
     <h2> Syllabus & Edstem </h2>
-      To be added...
+      The syllabus can be accessed
+      <a href="https://docs.google.com/document/d/1cdK1wn0qhROvsOMf143NUE6tBIVjlEBRUMjalL9DkRI" >
+         here.
+      </a>
+      The EdStem page will be added soon.
     </div>
     <div>
     <h2> Assignments </h2>
-    Assignments and due dates will be added here. A link to Gradescope will also be added.
+    Assignments and due dates will be added here. Grades will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope.
     </div>
     <div>
     <h2>
