Update course information and fix typos in index.html
Corrected punctuation and improved clarity in course details.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <div>
         <h2> Welcome </h2>
-        <p> Welcome to the course website for the Fall 2025 edition of CSCI1951Y at Brown University.
+        <p> Welcome to the course website for the Fall 2025 edition of CSCI1951Y at Brown University!
         Here is some basic information about the course: 
         </p>
         <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes </a> </p>
@@ -34,13 +34,13 @@
     <h2> Syllabus & Edstem </h2>
       The syllabus can be accessed
       <a href="https://docs.google.com/document/d/1cdK1wn0qhROvsOMf143NUE6tBIVjlEBRUMjalL9DkRI" >
-         here.
+         here
       </a>
-      The EdStem page will be added soon.
+      .The EdStem page will be added soon.
     </div>
     <div>
     <h2> Assignments </h2>
-    Assignments and due dates will be added here. Grades will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope.
+    Assignments and due dates will be added here. Note that grades will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope.
     </div>
     <div>
     <h2>
