--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
       The syllabus can be accessed
       <a href="https://docs.google.com/document/d/1cdK1wn0qhROvsOMf143NUE6tBIVjlEBRUMjalL9DkRI" >
          here
-      </a>
-      .The EdStem page will be added soon.
+      </a>.The EdStem page will be added soon.
     </div>
     <div>
     <h2> Assignments </h2>
