Added zoom and EdStem
Updated professor information and syllabus access details.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <p> Welcome to the course website for the Fall 2025 edition of CSCI1951Y at Brown University!
         Here is some basic information about the course: 
         </p>
-        <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes </a> </p>
+        <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes, CIT 365 </a> </p>
         <p> Head TA: Robert Shlyakhtenko </p>
         <p> Class Schedule: MWF 2pm-2:50pm in CIT 101 </p>
+        <p> Office Hours: Instructor and TA office hours will be announced after the semester begins. </p>
       </div>
     <div> 
       <h2> Course Description </h2>
@@ -31,15 +32,19 @@
       in some division ring. They'll also complete final projects in some geometry-related topic.
       </div>
     <div>
-    <h2> Syllabus & Edstem </h2>
-      The syllabus can be accessed
+    <h2> Syllabus & Course Access Links </h2>
+     <p> The syllabus can be accessed
       <a href="https://docs.google.com/document/d/1cdK1wn0qhROvsOMf143NUE6tBIVjlEBRUMjalL9DkRI" >
          here.
-      </a>The EdStem page will be added soon.
+      </a> The EdStem page is located <a href = "https://edstem.org/us/courses/85072"> here. </a> </p>
+    <p> We will use Zoom to facilitate lecture recordings and to allow students to present their work in class conveniently. The Zoom link is posted on EdStem, and
+        lecture recordings will be uploaded to Panopto. </p>
+    <p> Note that grades will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope. </p>
+    <p> We will not be using Canvas for this class.  All course information will be posted here or on EdStem. </p>
     </div>
     <div>
     <h2> Assignments </h2>
-    Assignments and due dates will be added here. Note that grades will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope.
+    Assignments and due dates will be added here. 
     </div>
     <div>
     <h2>
