Correct title wording for Isabelle/HOL paper link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </li>
     <li> 
       <a href="Formalizing Math in Isabelle.pdf">
-       Koutsoukou-Argyraki: First Experiences in Isabelle/HOL (PDF)
+       Koutsoukou-Argyraki: First Experiences with Isabelle/HOL (PDF)
       </a>
     </li>
     <li> 
