--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p> Welcome to the course website for the Fall 2025 edition of CSCI1951Y at Brown University!
         Here is some basic information about the course: 
         </p>
-        <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes, CIT 365 </a> </p>
+        <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes </a>, CIT 365 </p>
         <p> Head TA: Robert Shlyakhtenko </p>
         <p> Class Schedule: MWF 2pm-2:50pm in CIT 101 </p>
         <p> Office Hours: Instructor and TA office hours will be announced after the semester begins. </p>
@@ -39,7 +39,7 @@
       </a> The EdStem page is located <a href = "https://edstem.org/us/courses/85072"> here. </a> </p>
     <p> We will use Zoom to facilitate lecture recordings and to allow students to present their work in class conveniently. The Zoom link is posted on EdStem, and
         lecture recordings will be uploaded to Panopto. </p>
-    <p> Note that grades will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope. </p>
+    <p> Note that grades for individual assignments will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope. </p>
     <p> We will not be using Canvas for this class.  All course information will be posted here or on EdStem. </p>
     </div>
     <div>
