Update attendance policy in course details
Added information about attendance and participation requirements.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
          here.
       </a> The EdStem page is located <a href = "https://edstem.org/us/courses/85072"> here. </a> </p>
     <p> We will use Zoom to facilitate lecture recordings and to allow students to present their work in class conveniently. The Zoom link is posted on EdStem, and
-        lecture recordings will be uploaded to Panopto. </p>
+        lecture recordings will be uploaded to Panopto. 
+        Please note that credit for in-person attendance and participation represents a significant portion of your course grade. Attending virtually
+        is not an acceptable substitute.
+    </p>
     <p> Note that grades for individual assignments will be posted on Gradescope. Please contact the course staff if you do not have access to Gradescope. </p>
     <p> We will not be using Canvas for this class.  All course information will be posted here or on EdStem. </p>
     </div>
