--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       </a>
     </li>
     <li> 
+      <a href-"https://www.isa-afp.org/">
+        Archive of Formal Proofs
+      </a>  
+    </li>
+    <li> 
       <a href="Formalizing Math in Isabelle.pdf">
        Koutsoukou-Argyraki: First Experiences with Isabelle/HOL (PDF)
       </a>
