--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
       </a>
     </li>
     <li> 
+      <a href="https://www.isa-afp.org/">
+        Archive of Formal Proofs
+      </a>  
+    </li>
+    <li> 
       <a href="Hartshorne Projective Geometry.pdf">
         Hartshorne: Projective Geometry (PDF)
       </a>
-    </li>
-    <li> 
-      <a href-"https://www.isa-afp.org/">
-        Archive of Formal Proofs
-      </a>  
     </li>
     <li> 
       <a href="Formalizing Math in Isabelle.pdf">
