Add link to 'Lewis: The Art of Formal Proof'

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         Hartshorne: Projective Geometry (PDF)
       </a>
     </li>
+    <li>
+      <a href="Lewis Intro to Formal Proof.pdf">
+        Lewis: The Art of Formal Proof
+    </li>
     <li> 
       <a href="Formalizing Math in Isabelle.pdf">
        Koutsoukou-Argyraki: First Experiences with Isabelle/HOL (PDF)
