--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </li>
     <li>
       <a href="Lewis Intro to Formal Proof.pdf">
-        Lewis: The Art of Formal Proof
+        Lewis: The Art of Formal Proof (PDF)
     </li>
     <li> 
       <a href="Formalizing Math in Isabelle.pdf">
