Add link to Spivak: Calculus PDF in index.html

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         Hartshorne: Projective Geometry (PDF)
       </a>
     </li>
+    <li> 
+      <a href="Calculus Spivak.pdf">
+        Spivak: Calculus (PDF)
+      </a>
+    </li>
     <li>
       <a href="Lewis Intro to Formal Proof.pdf">
         Lewis: The Art of Formal Proof (PDF)
