Enhance assignments section with due dates table

--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
     </div>
     <div>
     <h2> Assignments </h2>
-    Assignments and due dates will be added here. 
+    Some assignments have multiple parts, which are due at different times. Always read the assignment PDF itself to double-check the due date.
+    <table>
+        <thead>
+            <tr>
+                <th>Assignment</th>
+                <th>Due Dates</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><li> <a href="CSCI1951Y_Materials.pdf"> Homework 1 <\a> </li> </td>
+                <td>9/05 & 9/10</td>
+            </tr>
+        </tbody>
+    </table>
     </div>
     <div>
     <h2>
