Fix HTML structure for Homework 1 link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </thead>
         <tbody>
             <tr>
-                <td><li> <a href="CSCI1951Y_Materials.pdf"> Homework 1 </li> </td>
+                <td> <a href="CSCI1951Y_Materials.pdf"> Homework 1 </td>
                 <td>9/05 & 9/10</td>
             </tr>
         </tbody>
