Add paragraph tag around assignment due date info

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div>
     <h2> Assignments </h2>
-    Some assignments have multiple parts, which are due at different times. Always read the assignment PDF itself to double-check the due date.
+    <p> Some assignments have multiple parts, which are due at different times. Always read the assignment PDF itself to double-check the due date. </p>
     <table>
         <thead>
             <tr>
