Add lecture notes section to index.html

--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
     </table>
     </div>
     <div>
+    <h2> Lecture Notes </h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Lecture #</th>
+                <th>Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td> <a href="class2.thy"> Lecture 2: Affine Planes, Isabelle Intro </td>
+                <td>9/05</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+    <div>
     <h2>
     Useful Links
     </h2>
