Add note about lecture notes format in index.html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
     <div>
     <h2> Lecture Notes </h2>
+    <p> Lecture notes are posted as .thy (Isabelle) files. </p>
     <table>
         <thead>
             <tr>
