Add link to 'Tao: Machine assisted proof' PDF

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
       <a href="Lewis Intro to Formal Proof.pdf">
         Lewis: The Art of Formal Proof (PDF)
     </li>
+    <li>
+      <a href="Tao Machine Assisted Proof.pdf">
+        Tao: Machine assisted proof (PDF)
+    <\li>
     <li> 
       <a href="Formalizing Math in Isabelle.pdf">
        Koutsoukou-Argyraki: First Experiences with Isabelle/HOL (PDF)
