Enhance lecture notes with recordings and links
Updated lecture notes section with additional recordings and links.

--- a/index.html
+++ b/index.html
@@ -60,25 +60,49 @@
                 <td> <a href="CSCI1951Y_Materials.pdf"> Homework 1 </td>
                 <td>9/05 & 9/10</td>
             </tr>
+            <tr>
+                <td> <p> <a href="Spivak0.thy"> Homework 2a: Spivak0 </p>
+                     <p> <a href="Spivak1.thy"> Homework 2b: Spivak1 </p>
+                </td>
+                <td> 9/17 </td>
+            </tr>
         </tbody>
     </table>
     </div>
     <div>
-    <h2> Lecture Notes </h2>
-    <p> Lecture notes are posted as .thy (Isabelle) files. </p>
+    <h2> Lecture Notes & Recordings </h2>
+    <p> Lecture notes are posted as .thy (Isabelle) files. A full list of recordings is available 
+      <a href="https://brown.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx#folderID=%22361f532b-f63a-417c-a11f-b34700f524c7%22"> here. </p>
     <table>
         <thead>
             <tr>
                 <th>Lecture #</th>
+                <th> Recording </th>
                 <th>Date</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td> <a href="class2.thy"> Lecture 2: Affine Planes, Isabelle Intro </td>
+                <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=247f8351-b7f5-426d-9a97-b351002cbc39"> Recording
                 <td>9/05</td>
             </tr>
         </tbody>
+        <tbody>
+            <tr>
+                <td> Lecture 3: Axiomatizing Real Numbers in Isabelle </td>
+                <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=63a24dcd-38b9-4cca-8027-b352013c7eff" Recording
+                <td>9/08</td>
+            </tr>
+         </tbody>
+         <tbody>
+            <tr>
+                <td> Lecture 4: Axiomatizing Real Numbers in Isabelle </td>
+                <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=03db483d-3608-4959-bd22-b354013dbcb6" Recording
+                <td>9/10</td>
+            </tr>
+         </tbody>
+        
     </table>
     </div>
     <div>
