--- a/index.html
+++ b/index.html
@@ -75,37 +75,37 @@
       <a href="https://brown.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx#folderID=%22361f532b-f63a-417c-a11f-b34700f524c7%22"> here. </a>
     </p>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Lecture #</th>
-                <th> Recording </th>
-                <th>Date</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td> <a href="class2.thy"> Lecture 2: Affine Planes, Isabelle Intro </td>
-                <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=247f8351-b7f5-426d-9a97-b351002cbc39"> Recording </a> </td>
-                <td>9/05</td>
-            </tr>
-        </tbody>
-        <tbody>
-            <tr>
-                <td> Lecture 3: Axiomatizing Real Numbers in Isabelle </td>
-                <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=63a24dcd-38b9-4cca-8027-b352013c7eff" Recording </a> </td>
-                <td>9/08</td>
-            </tr>
-         </tbody>
-         <tbody>
-            <tr>
-                <td> Lecture 4: Axiomatizing Real Numbers in Isabelle </td>
-                <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=03db483d-3608-4959-bd22-b354013dbcb6" Recording </a> </td>
-                <td>9/10</td>
-            </tr>
-         </tbody>
-        
-    </table>
+   <table>
+    <thead>
+        <tr>
+            <th>Lecture #</th>
+            <th>Recording</th>
+            <th>Date</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td> <a href="class2.thy">Lecture 2: Affine Planes, Isabelle Intro</a> </td>
+            <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=247f8351-b7f5-426d-9a97-b351002cbc39">Recording</a> </td>
+            <td>9/05</td>
+        </tr>
+    </tbody>
+    <tbody>
+        <tr>
+            <td>Lecture 3: Axiomatizing Real Numbers in Isabelle</td>
+            <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=63a24dcd-38b9-4cca-8027-b352013c7eff">Recording</a> </td>
+            <td>9/08</td>
+        </tr>
+    </tbody>
+    <tbody>
+        <tr>
+            <td>Lecture 4: Axiomatizing Real Numbers in Isabelle</td>
+            <td> <a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=03db483d-3608-4959-bd22-b354013dbcb6">Recording</a> </td>
+            <td>9/10</td>
+        </tr>
+    </tbody>
+</table>
+
     </div>
     <div>
     <h2>
