--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <p> Professor: <a href="https://cs.brown.edu/people/faculty/jhughes/"> John F. Hughes</a>, CIT 365 </p>
         <p> Head TA: Robert Shlyakhtenko </p>
         <p> Class Schedule: MWF 2pm-2:50pm in CIT 101 </p>
-        <p> Office Hours: Instructor and TA office hours will be announced after the semester begins. </p>
+        <p> Prof. Hughes' Office Hours: W 3-4:30pm, Th 4:30-5:30pm, CIT 365. </p>
+        <p> Robert's Office Hours: T 7-8pm, CIT 241; Th 4-5pm, CIT 165; </p>
       </div>
     <div> 
       <h2> Course Description </h2>
