Update lecture section and add GitHub link

--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
     </table>
     </div>
     <div>
-    <h2> Lecture Notes & Recordings </h2>
-    <p> Lecture notes are posted as .thy (Isabelle) files. A full list of recordings is available 
+    <h2> GitHub & Recordings </h2>
+    <p> Course materials are available on GitHub on the <a href="https://github.com/spike7638/CS1951Y-2025"> CS1951Y repository. </a>
+      A full list of recordings is available 
       <a href="https://brown.hosted.panopto.com/Panopto/Pages/Sessions/List.aspx#folderID=%22361f532b-f63a-417c-a11f-b34700f524c7%22"> here. </a>
     </p>
-
+<!--
    <table>
     <thead>
         <tr>
@@ -105,9 +106,9 @@
             <td>9/10</td>
         </tr>
     </tbody>
-</table>
-
+</table
     </div>
+-->
     <div>
     <h2>
     Useful Links
