Revise assignment details in index.html
Updated assignment information to include submission methods and due dates.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     </div>
     <div>
     <h2> Assignments </h2>
-    <p> Some assignments have multiple parts, which are due at different times. Always read the assignment PDF itself to double-check the due date. </p>
+    <p> Some assignments have multiple parts, which are due at different times. Always read the assignment PDF/EdStem announcement itself to double-check the due date.
+        Depending on the assignment, you may be asked to turn in the assignment via Gradescope or via a commit to the Github repository.
+    </p>
     <table>
         <thead>
             <tr>
@@ -66,6 +68,10 @@
                       <a href="Spivak1.thy"> Homework 2b: Spivak1 </a>
                 </td>
                 <td> 9/17 </td>
+            </tr>
+            <tr>
+                <td> Homework 3: Hartshorne Chapter 1-1 (posted on EdStem) </td> </a>
+                <td>9/24 (two submissions on Gradescope, one via Github commit) </td>
             </tr>
         </tbody>
     </table>
