Add Homework 4 and additional resources to index.html

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                 <td> Homework 3: Hartshorne Chapter 1-1 (posted on EdStem) </td> </a>
                 <td>9/24 (two submissions on Gradescope, one via Github commit) </td>
             </tr>
+             <tr>
+                <td> Homework 4: Projectivization (posted on EdStem) </td> </a>
+                <td>10/1 (submission via Gitub commit) </td>
+            </tr>
         </tbody>
     </table>
     </div>
@@ -136,9 +140,14 @@
         Archive of Formal Proofs
       </a>  
     </li>
-     <li> 
+    <li> 
       <a href="https://isabelle.in.tum.de/doc/tutorial.pdf">
         Isabelle tutorial
+      </a>  
+    </li>
+     <li> 
+      <a href="http://cl-informatik.uibk.ac.at/teaching/ss24/itpIsa/slides/09x1.pdf">
+        Slides on type definitions, lifting/transfer package
       </a>  
     </li>
     <li> 
