Fix typo in submission date reference

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </tr>
              <tr>
                 <td> Homework 4: Projectivization (posted on EdStem) </td> </a>
-                <td>10/1 (submission via Gitub commit) </td>
+                <td>10/1 (submission via Github commit) </td>
             </tr>
         </tbody>
     </table>
