Update homework assignments and add new lecture slides

--- a/index.html
+++ b/index.html
@@ -70,12 +70,16 @@
                 <td> 9/17 </td>
             </tr>
             <tr>
-                <td> Homework 3: Hartshorne Chapter 1-1 (posted on EdStem) </td> </a>
+                <td> Homework 3: Hartshorne 1-6 (posted on EdStem) </td> </a>
                 <td>9/24 (two submissions on Gradescope, one via Github commit) </td>
             </tr>
              <tr>
                 <td> Homework 4: Projectivization (posted on EdStem) </td> </a>
                 <td>10/1 (submission via Github commit) </td>
+            </tr>
+            <tr>
+                <td> Homework 5: Hartshorne 17, 19 </td> </a>
+                <td>10/15 </td>
             </tr>
         </tbody>
     </table>
@@ -148,6 +152,11 @@
      <li> 
       <a href="http://cl-informatik.uibk.ac.at/teaching/ss24/itpIsa/slides/09x1.pdf">
         Slides on type definitions, lifting/transfer package
+      </a>  
+    </li>
+     <li> 
+      <a href="https://cledmonds.github.io/assets/pdf/Lecture2.pdf">
+        Slides on locales and type classes
       </a>  
     </li>
     <li> 
