Update Homework 3 description in index.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <td> 9/17 </td>
             </tr>
             <tr>
-                <td> Homework 3: Hartshorne 1-6 (posted on EdStem) </td> </a>
+                <td> Homework 3: Hartshorne 1-6, Chapter 1-1 (posted on EdStem) </td> </a>
                 <td>9/24 (two submissions on Gradescope, one via Github commit) </td>
             </tr>
              <tr>
